Deixando de usar getFirst() e getLast() por erro ao executar o testes nas linhas de chamada desses métodos